Import of RKRIMEN/Path-Resource-0.01_2 from CPAN.
gitpan-cpan-distribution: Path-Resource
gitpan-cpan-version:      0.01_2
gitpan-cpan-path:         RKRIMEN/Path-Resource-0.01_2.tar.gz
gitpan-cpan-author:       RKRIMEN
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,1 +1,6 @@
---
+---
+ - [ 2007-02-16, 0.01_2 ]
+ - Some documentation coverage. Fully functional with tests.
+
+ - [2007-02, 0.01_1 ]
+ - Initial release, initial interface.
