--- a/Changes
+++ b/Changes
@@ -1,6 +1,15 @@
----
- - [ 2007-02-16, 0.01_2 ]
- - Some documentation coverage. Fully functional with tests.
+0.03 Tuesday June 26 20:02:47 PDT 2007:
+ - Rewrite using Path::Lite
 
- - [2007-02, 0.01_1 ]
- - Initial release, initial interface.
+0.01_4 2007-4-27:
+ - More documentation
+
+0.01_3 2007-2-25:
+ - New "Changes" format (big release, I know)
+ 
+0.01_2 2007-2-16:
+ - Some documentation coverage
+ - Fully functional with tests
+
+0.01_1 2007-2:
+ - Initial release
