Import of RKRIMEN/Path-Resource-0.04 from CPAN.
gitpan-cpan-distribution: Path-Resource
gitpan-cpan-version:      0.04
gitpan-cpan-path:         RKRIMEN/Path-Resource-0.04.tar.gz
gitpan-cpan-author:       RKRIMEN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
+0.04 Monday July 30 11:29:31 PDT 2007:
+ - Only prepend path in file/dir/loc if it is non-empty
+
 0.03 Tuesday June 26 20:02:47 PDT 2007:
- - Rewrite using Path::Lite
+ - Rewrite using Path::Abstract
 
 0.01_4 2007-4-27:
  - More documentation
