Import of RKRIMEN/Path-Resource-0.041 from CPAN.
gitpan-cpan-distribution: Path-Resource
gitpan-cpan-version:      0.041
gitpan-cpan-path:         RKRIMEN/Path-Resource-0.041.tar.gz
gitpan-cpan-author:       RKRIMEN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.041 Saturday August 04 19:59:45 PDT 2007 
+ - Minor change to Build.PL: Test::Lazy requirement
+
 0.04 Monday July 30 11:29:31 PDT 2007:
  - Only prepend path in file/dir/loc if it is non-empty
 
