Import of RKRIMEN/Path-Resource-0.042 from CPAN.
gitpan-cpan-distribution: Path-Resource
gitpan-cpan-version:      0.042
gitpan-cpan-path:         RKRIMEN/Path-Resource-0.042.tar.gz
gitpan-cpan-author:       RKRIMEN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.042 Sunday August 05 11:39:28 PDT 2007:
+
 0.041 Saturday August 04 19:59:45 PDT 2007 
  - Minor change to Build.PL: Test::Lazy requirement
 
