--- a/Changes
+++ b/Changes
@@ -1,3 +1,18 @@
+TODO:
+ - Grab some tests from URI::ToDisk ? 
+ - $rsc->location as an alias for $rsc->loc ?
+
+0.06 Saturday August 25 15:58:44 PDT 2007
+ - Make sure ->base->loc, ->base->dir, and ->base->uri are in the right format when changing
+ - More documentation: Description and rationale in Path/Resource.pm
+ - More documentation for Path::Resource::Base
+ - This is comprehensive release, as all major functionality is documented with examples.
+
+0.06 Tuesday August 21 00:17:48 PDT 2007:
+ - More documentation
+ - Cleaned up some Path::Resource::Base processing
+ - $rsc->base->uri should now return the original uri passed in
+
 0.05 Thursday August 09 18:39:47 PDT 2007:
  - $rsc->path will not return a path clone instead of the original
  - More documentation
