Import of RKRIMEN/Path-Resource-0.070 from CPAN.
gitpan-cpan-distribution: Path-Resource
gitpan-cpan-version:      0.070
gitpan-cpan-path:         RKRIMEN/Path-Resource-0.070.tar.gz
gitpan-cpan-author:       RKRIMEN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,12 +1,17 @@
 TODO:
  - Grab some tests from URI::ToDisk ? 
  - $rsc->location as an alias for $rsc->loc ?
+ - $rsc->abstract to return a Path::Abstract object based on $dir, $path ?
 
-0.06 Saturday August 25 15:58:44 PDT 2007
+0.070 Saturday January 19 10:39:12 PST 2008:
+ - Changed build process over to Module::Install
+ - Fixed failing tests on Win32 (rep. RENEEB)
+
+0.06 Saturday August 25 15:58:44 PDT 2007:
  - Make sure ->base->loc, ->base->dir, and ->base->uri are in the right format when changing
  - More documentation: Description and rationale in Path/Resource.pm
  - More documentation for Path::Resource::Base
- - This is comprehensive release, as all major functionality is documented with examples.
+ - This is comprehensive release, as all major functionality is documented with examples
 
 0.06 Tuesday August 21 00:17:48 PDT 2007:
  - More documentation
